
- v1.0.1011                                 -
---------------------------------------------
- 2020-06-13                                -
---------------------------------------------
.: WSM: Task: Improvement: Item list image indicator (WSM-124)
.: WSM: Task: Customize item status (WSM-103)
.: WSM: Task: CLONE - Add Item Type Concept into website (WSM-129)

---------------------------------------------
- 2020-06-12                                -
---------------------------------------------
.: WSM: Task: Add a number of selections in item controller (WSM-110)
.: WSM: Task: Order by id (WSM-117)
.: WSM: Task: Multiple page selections (WSM-111)
.: WSM: Task: Change advertisement image to other name (WSM-107)

---------------------------------------------
- 2020-06-11                                -
---------------------------------------------
.: WSM: Task: Loading top bar (WSM-116)
.: WSM: BugFix: Shop not found if username has changed when scan qr code (WSM-121)
.: WSM: Task: Remove icon in QR code (WSM-126)
.: WSM: Task: Got black background when upload transparent png image (WSM-109)
.: WSM: Task: Unpublish page to not show to public (WSM-118)

- v1.0.1010                                 -
---------------------------------------------
- 2020-06-07                                -
---------------------------------------------
.: WSM: Task: Update shop profile image (WSM-105)
.: WSM: Task: A button to view your shop (WSM-88)
.: WSM: Task: Create build scripts (WSM-15)
.: WSM: Task: Add default mark for discount (WSM-92)
.: WSM: BugFix: Fixing import items issue (WSM-87)
.: WSM: Task: Update QRcode crossOrigin (WSM-79)
.: WSM: Task: Fix import issue (WSM-87)
.: WSM: Task: Update dot image (WSM-79)
.: WSM: Task: Profile image is not displayed in mobile size (WSM-108)
.: WSM: Task: Fix CORS Issue (WSM-79)

---------------------------------------------
- 2020-06-06                                -
---------------------------------------------