@@ -33,9 +33,11 @@
         <div class="table-responsive mb-3" style="max-height:65vh; overflow-y: auto;" id="tableView"></div>
         <div *ngIf="!isUploaded">
             <h6 class="font-weight-bold">Tips:</h6>
-            <ul class="mb-3">
-                <li>Quick way to upload items details.</li>
+            <ul class="mb-3 font-9">
+                <li>A quick way to import items details.</li>
                 <li>All details must to fill-in except description column.</li>
+                <li>You can download the template and modify.</li>
+                <li>Only accept <span class="text-warning">Excel</span> file.</li>
             </ul>
             <h6 class="font-weight-bold">Example:</h6>
             <table class="table font-9 mb-4">
