@@ -6,6 +6,14 @@
         You may click <a href="javascript:void(0)" (click)="publishPage()" class="font-weight-bold">here</a> to show to public once your page is ready.
       </div>
     </div>
+    <div *ngIf="!isClear && !shop?.isPublished && !numberOfAllItems" class="pt-3">
+      <div class="alert alert-warning alert-dismissible fade show font-8 mb-0" role="alert">
+        Click on <span class="fas fa-upload px-2"></span> button to import items quickly.
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="closeAlert()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+    </div>
     <div class="row no-gutters w-100 position-relative">
       <span *ngIf="isMobileSize" class="text-center clickable"
         style="line-height: 47px; vertical-align: middle; border-bottom: 1px solid #e5e5e5"
