@@ -1,4 +1,4 @@
-import { Component, OnInit } from '@angular/core';
+import { Component, OnInit, ViewChild, ElementRef } from '@angular/core';
 import { SharedShopService } from '@services/shared/shared-shop.service';
 import { SharedNavbarService } from '@services/shared/shared-nav-bar.service';
 import { takeUntil } from 'rxjs/operators';
@@ -9,6 +9,8 @@ import { AuthShopAdminService } from '@services/http/auth-shop/admin/auth-shop-a
 import { ScreenService } from '@services/general/screen.service';
 import { environment } from '@environments/environment';
 import { WsToastService } from '@elements/ws-toast/ws-toast.service';
+import { SharedCategoryService } from '@services/shared/shared-category.service';
+import { WsLoading } from '@elements/ws-loading/ws-loading';
 
 @Component({
   selector: 'main-container',
@@ -21,13 +23,17 @@ export class MainContainerComponent implements OnInit {
   isAdminAuthorized: boolean;
   isConfirmReactivateShopModalOpened: boolean;
   isMobileSize: boolean;
-  environment = environment;
+  isClear: boolean = true;
+  numberOfAllItems: number;
+  environment = environment; 
+  @ViewChild('alert', { static: true }) alert: ElementRef;
   private ngUnsubscribe: Subject<any> = new Subject;
   constructor(private router: Router,
     private route: ActivatedRoute,
     private screenService: ScreenService,
     private authShopAdminService: AuthShopAdminService,
     private sharedShopService: SharedShopService,
+    private sharedCategoryService: SharedCategoryService,
     private shopAuthorizationService: ShopAuthorizationService,
     private sharedNavbarService: SharedNavbarService) { }
 
@@ -37,6 +43,7 @@ export class MainContainerComponent implements OnInit {
     .subscribe(result => {
       if (result) {
         this.shop = result;
+        this.isClear = false;
       }
     })
     this.screenService.isMobileSize.pipe(takeUntil(this.ngUnsubscribe)).subscribe(result => {
@@ -49,6 +56,9 @@ export class MainContainerComponent implements OnInit {
     .subscribe(result => {
       this.isAdminAuthorized = result;
     });
+    this.sharedCategoryService.numberOfAllItems.pipe(takeUntil(this.ngUnsubscribe)).subscribe(result => {
+      this.numberOfAllItems = result;
+    })
   }
   onNavbarOpen() {
     this.isNavOpen = !this.isNavOpen
@@ -75,6 +85,9 @@ export class MainContainerComponent implements OnInit {
         WsToastService.toastSubject.next({ content: err.error, type: 'danger' });
       });
     }
+  }
+  closeAlert() {
+    this.isClear = true;
   }
   ngOnDestroy() {
     this.ngUnsubscribe.next();
