@@ -289,6 +289,7 @@ button{
 a.default{
     color: #000;
     font-weight:normal;
+    cursor: pointer;
     &:hover{
         text-decoration: underline;
     }
